--- a/source/catalog.html
+++ b/source/catalog.html
@@ -50,7 +50,7 @@
                 <td class="product__value">700 Р.</td>
               </tr>
             </table>
-            <button class="product__button button" type="button">Заказать</button>
+            <a class="product__button button" href="#">Заказать</a>
           </li>
           <li class="catalog__item product">
             <a class="product__link" href="#"><img class="product__image" width="140" height="144" src="img/chicken-big-mobile@1x.jpg" alt="Кэт энерджи с курицей 1000г"></a>
@@ -69,7 +69,7 @@
                 <td class="product__value">1000 Р.</td>
               </tr>
             </table>
-            <button class="product__button button" type="button">Заказать</button>
+            <a class="product__button button" href="#">Заказать</a>
           </li>
           <li class="catalog__item product">
             <a class="product__link" href="#"><img class="product__image" width="140" height="144" src="img/fish-small-mobile@1x.jpg" alt="Кэт энерджи с рыбой 500г"></a>
@@ -88,7 +88,7 @@
                 <td class="product__value">700 Р.</td>
               </tr>
             </table>
-            <button class="product__button button" type="button">Заказать</button>
+            <a class="product__button button" href="#">Заказать</a>
           </li>
           <li class="catalog__item product">
             <a class="product__link" href="#"><img class="product__image" width="140" height="144" src="img/fish-big-mobile@1x.jpg" alt="Кэт энерджи с рыбой 1000г"></a>
@@ -107,7 +107,7 @@
                 <td class="product__value">1000 Р.</td>
               </tr>
             </table>
-            <button class="product__button button" type="button">Заказать</button>
+            <a class="product__button button" href="#">Заказать</a>
           </li>
           <li class="catalog__item product">
             <a class="product__link" href="#"><img class="product__image" width="140" height="144" src="img/buckwheat-small-mobile@1x.jpg" alt="Кэт энерджи с гречькой 500г"></a>
@@ -126,7 +126,7 @@
                 <td class="product__value">400 Р.</td>
               </tr>
             </table>
-            <button class="product__button button" type="button">Заказать</button>
+            <a class="product__button button" href="#">Заказать</a>
           </li>
           <li class="catalog__item product">
             <a class="product__link" href="#"><img class="product__image" width="140" height="144" src="img/buckwheat-big-mobile@1x.jpg" alt="Кэт энерджи с гречькой 1000г"></a>
@@ -145,7 +145,7 @@
                 <td class="product__value">700 Р.</td>
               </tr>
             </table>
-            <button class="product__button button" type="button">Заказать</button>
+            <a class="product__button button" href="#">Заказать</a>
           </li>
           <li class="catalog__item product">
             <a class="product__link" href="#"><img class="product__image" width="140" height="144" src="img/rice-small-mobile@1x.jpg" alt="Кэт энерджи с рисом 500г"></a>
@@ -164,8 +164,7 @@
                 <td class="product__value">500 Р.</td>
               </tr>
             </table>
-            <button class="product__button button" type="button">Заказать</button>
-          </li>
+            <a class="product__button butto" href="#">Заказать</a></li>
         </ul>
       </section>
     </main>
