--- a/source/catalog.html
+++ b/source/catalog.html
@@ -172,6 +172,48 @@
           <a class="catalog__button button" href="#">Показать все</a>
         </div>
       </section>
+
+      <section class="additional">
+        <h2 class="additional__title">Дополнительные товары</h2>
+        <ul class="additional__list">
+          <li class="additional__item other-goods">
+            <h3 class="other-goods__title">Сахарозаменитель</h3>
+            <div class="other-goods__description">
+              <p class="other-goods__value">1 упаковка (100 г)</p>
+              <p class="other-goods__cost">200 Р.</p>
+            </div>
+            <a class="other-goods__button button" href="#">Заказать</a>
+          </li>
+          <li class="additional__item other-goods">
+            <h3 class="other-goods__title">Питьевая вода</h3>
+            <div class="other-goods__description">
+              <p class="other-goods__value">5 литров</p>
+              <p class="other-goods__cost">50 Р.</p>
+            </div>
+            <a class="other-goods__button button" href="#">Заказать</a>
+          </li>
+          <li class="additional__item other-goods">
+            <h3 class="other-goods__title">Молоко</h3>
+            <div class="other-goods__description">
+              <p class="other-goods__value">1 литр</p>
+              <p class="other-goods__cost">100 Р.</p>
+            </div>
+            <a class="other-goods__button button" href="#">Заказать</a>
+          </li>
+          <li class="additional__item other-goods">
+            <h3 class="other-goods__title">Витамины</h3>
+            <div class="other-goods__description">
+              <p class="other-goods__value">1 упаковка (30 г)</p>
+              <p class="other-goods__cost">300 Р.</p>
+            </div>
+            <a class="other-goods__button button" href="#">Заказать</a>
+          </li>
+        </ul>
+        <div class="additional__gift">
+          <p class="additional__gift-description">Закажите все и получите чехол для кота в подарок!</p>
+        </div>
+      </section>
+
     </main>
 
     <footer class="page-footer">
