--- a/source/form.html
+++ b/source/form.html
@@ -57,7 +57,7 @@
               <p class="form__item">
                 <label class="form__label form__label--text">
                   Вес (кг):*
-                  <input class="form__text" type="text" name="weight-name" placeholder="7">
+                  <input class="form__text" type="text" name="cat-weight" placeholder="7">
                 </label>
               </p>
               <p class="form__item">
@@ -235,6 +235,6 @@
       </div>
     </footer>
 
-    <script src="js/app.js"></script>
+    <script src="js/library/validation.js"></script>
   </body>
 </html>
