--- a/source/catalog.html
+++ b/source/catalog.html
@@ -10,6 +10,7 @@
       document.createElement( "picture" );
     </script>
     <script src="js/picturefill.js" async></script>
+    <script src="js/svguse.js" defer></script>
   </head>
   <body class="content no-js">
     <script>
